fix: added vendor prefixes to scrollbar in selections

--- a/src/components/Selections/SelectionsPlayer.css
+++ b/src/components/Selections/SelectionsPlayer.css
@@ -253,6 +253,7 @@
     cursor: pointer;
     width: 50px;
     height: 3px;
+    margin-top: -3px;
     border-radius: 20px;
     background: var(--white-0);
     accent-color: var(--gray-black-800);
